--- a/Tether.css
+++ b/Tether.css
@@ -5,7 +5,8 @@
 	--hColor:#ffbe42;
 	--dColor:#e89805;
 	--tColor:#fefefe;
-	--lColor:pink;
+	--lColor:#ff5500;
+	--sColor:#ff7700;
 	--fColor:#f8f8ff;
 	--hSize:40px;
 	--fSize:50px;
