--- a/Tether.css
+++ b/Tether.css
@@ -24,6 +24,11 @@
 	display: none;
 }
 
+a, a:visited, a:hover {
+	color: unset;
+    text-decoration: unset;
+}
+
 body {
 	width: 100vw;
 	margin: 0px;
