--- a/Landing.css
+++ b/Landing.css
@@ -13,7 +13,7 @@
 	background-position: center center;
 	-webkit-filter: blur(5px);
 	filter: blur(5px);
-	background-image: url(http://3.bp.blogspot.com/-YI26hOcqqqA/VZBDCl9TsiI/AAAAAAAAHbc/1MV72TiBDoE/s1600/zakgig_062715_004.jpg);
+	background-image: url(https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/icons/Snapshot_091.jpg);
 }
 
 #landingModal {
